Destination Entity & Controller

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,10 +28,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Accommodation" asp-action="Index">Manage Accommodation</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Accommodation" asp-action="Index">Manage Accommodation</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Destination" asp-action="Index">Manage Destination</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Activity" asp-action="Index">Manage Activity</a>
                         </li>
                     </ul>
                 </div>
