--- a/Views/Accommodation/Index.cshtml
+++ b/Views/Accommodation/Index.cshtml
@@ -12,7 +12,7 @@
 
 <form asp-action="Delete" method="post">
 
-    <table class="table table-bordered table-striped table-sm">
+    <table class="table table-bordered table-striped table-sm table-dark">
         <thead>
             <tr>
                 <th>
