--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using TripLog_App
 @using TripLog_App.Models
 @using TripLog_App.Models.DomainModels
+@using TripLog_App.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
