--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 <div class="m-2">
-    <a asp-action="Add" asp-controller="TripController" asp-route-id="page1" class="btn btn-dark">Add Trip</a>
+    <a asp-action="Add" asp-controller="Trip" asp-route-id="page1" class="btn btn-dark">Add Trip</a>
 </div>
 <form asp-action="Delete" asp-controller="Trip">
     <table class="table table-bordered table-striped mt-2">
