--- a/Views/Trip/Add1.cshtml
+++ b/Views/Trip/Add1.cshtml
@@ -34,6 +34,6 @@
     </div>
     <div class="mb-3">
         <button type="submit" class="btn btn-dark">Next</button>
-        <a asp-action="Cancel" class="btn btn-outline-dark">Cancel</a>
+        <a asp-action="Index" class="btn btn-outline-dark">Cancel</a>
     </div>
 </form>
