finished TripView and Controller

--- a/Views/Activity/Index.cshtml
+++ b/Views/Activity/Index.cshtml
@@ -30,7 +30,7 @@
                     <td>@act.ActivityName</td>
                     
                     <td>
-                        <button type="submit" name="id" value="@act.ActivityId"
+                        <button type="submit" name="id" value="@act.ActivityID"
                                 class="btn btn-danger">
                             Delete
                         </button>
