--- a/Views/Destination/Index.cshtml
+++ b/Views/Destination/Index.cshtml
@@ -27,7 +27,7 @@
                         @dest.DestName
                     </td>
                     <td>
-                        <button type="submit" name="id" value="@dest.DestinationId"
+                        <button type="submit" name="id" value="@dest.DestinationID"
                                 class="btn btn-danger">
                             Delete
                         </button>
