--- a/Views/Accommodation/Index.cshtml
+++ b/Views/Accommodation/Index.cshtml
@@ -38,7 +38,7 @@
                     <td>@acc.Email</td>
                     <td>
                         <button type="submit" name="id" 
-                                value="@acc.AccommodationId"
+                                value="@acc.AccommodationID"
                                 class="btn btn-danger">
                             Delete
                         </button>
