--- a/Views/Trip/Add2.cshtml
+++ b/Views/Trip/Add2.cshtml
@@ -19,7 +19,7 @@
     </div>
 
     <div class="mb-3">
-        <button type="submit" class="btn btn-dark">Next</button>
+        <button type="submit" class="btn btn-dark">Save</button>
         <a asp-action="Cancel" class="btn btn-outline-dark">Cancel</a>
     </div>
 </form>
